syntax = "proto3";

option csharp_namespace = "Skyra.Grpc.Services";

package member;

// The greeting service definition.
service Member {
  // Sends a greeting
  rpc AddPoints (PointsQuery) returns (PointsResult);
  rpc GetPoints (MemberQuery) returns (PointsResult);
}

// The request message containing the user's name.
message PointsQuery {
  string id = 1;
  int32 amount = 2;
}

message MemberQuery {
  string id = 1;
}

// The response message containing the greetings.
message PointsResult {
  bool success = 1;
  int64 amount = 2;
  string error_message = 3;
}
